--- a/yoko.css
+++ b/yoko.css
@@ -114,3 +114,31 @@ section.contpage {
 	text-align: center;
 	font-size: 20px;
 }
+
+header
+{
+	height: 200px;
+}
+
+article p
+{
+	text-align: justify;
+}
+
+aside
+{
+	width: 230px;
+	margin-left: 20px;
+	float: right;
+}
+
+aside a
+{
+	color: #de6581;
+	text-decoration: none;
+}
+
+h1, h2, h3
+{
+	font-weight: normal;
+}
